# elmfmt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  makefile
.github/workflows/: ci.yml  deploy.yml
queries/: elm.scm  if_hanging.scm  if_indented.scm  tuple_compact.scm  tuple_spaced.scm
src/: lib.rs  main.rs
tests/: formatting_tests.rs
tests/fixtures/: already_formatted_expected.elm  already_formatted_input.elm  anonymous_function_expected.elm  anonymous_function_input.elm  backpipe_multiline_expected.elm  backpipe_multiline_input.elm  binop_paren_if_expected.elm  binop_paren_if_input.elm  blank_lines_expected.elm  blank_lines_input.elm  block_comment_in_func_call_expected.elm  block_comment_in_func_call_input.elm  case_expression_expected.elm  case_expression_input.elm  comments_expected.elm  comments_input.elm  cons_pattern_expected.elm  cons_pattern_input.elm  doc_comment_after_import_expected.elm  doc_comment_after_import_input.elm  doc_comment_after_type_expected.elm  doc_comment_after_type_input.elm  effect_module_expected.elm  effect_module_input.elm  elseif_then_comment_expected.elm  elseif_then_comment_input.elm  func_call_multiarg_paren_if_expected.elm  func_call_multiarg_paren_if_input.elm  func_call_with_if_in_lambda_expected.elm  func_call_with_if_in_lambda_input.elm  function_declaration_expected.elm  function_declaration_input.elm  if_comment_elseif_expected.elm  if_comment_elseif_input.elm  if_comment_expected.elm  if_comment_input.elm  if_comment_let_expected.elm  (+79 more)
tree-sitter-elm/: grammar.js
web/: app.js  index.html  style.css
(+2 files in other folders)
