[package]
name = "elmfmt"
version = "0.1.0"
edition = "2021"
description = "A formatter for Elm code, powered by Topiary"
license = "ISC"
repository = "https://github.com/ad-si/elmfmt"
keywords = ["elm", "formatter", "topiary"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
topiary-core = "0.6"
tree-sitter-elm = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
