[package]
name = "elmfmt"
version = "0.1.0"
edition = "2021"
description = "A formatter for Elm code, powered by Topiary"
license = "ISC"
repository = "https://github.com/ad-si/elmfmt"
keywords = ["elm", "formatter", "topiary"]
categories = ["command-line-utilities", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
topiary-core = "0.6"
tree-sitter-elm = { path = "tree-sitter-elm" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
